--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
     "short_name": "would you?",
     "icons": [
       {
-        "src": "/favicon.png",
+        "src": "favicon.png",
         "sizes": "192x192",
         "type": "image/png"
       }
